Project RateSentinel {
  database_type: "MySQL"
  Note: "Multi-tenant API rate limiting & abuse protection platform"
}

/* ============================
   TENANTS
============================ */
Table tenants {
  id bigint [pk, increment]
  name varchar(255) [not null, unique]
  status enum('active', 'suspended') [default: 'active']
  kill_switch boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  Note: "Root tenant entity; kill_switch allows instant traffic shutdown"
}

/* ============================
   USERS
============================ */
Table users {
  id bigint [pk, increment]
  tenant_id bigint [not null]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  role enum('admin', 'developer', 'viewer') [not null]
  status enum('active', 'disabled') [default: 'active']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (tenant_id)
  }

  Note: "Authenticated users with role-based access control"
}

/* ============================
   APIS
============================ */
Table apis {
  id bigint [pk, increment]
  tenant_id bigint [not null]
  name varchar(255) [not null]
  environment enum('dev', 'staging', 'prod') [not null]
  base_url varchar(512)
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (tenant_id)
  }

  Note: "APIs registered by tenants for rate limiting and protection"
}

/* ============================
   API KEYS
============================ */
Table api_keys {
  id bigint [pk, increment]
  api_id bigint [not null]
  key_hash char(64) [not null, unique]
  status enum('active', 'revoked') [default: 'active']
  last_used_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (api_id)
  }

  Note: "Hashed API keys used to identify and rate-limit callers"
}

/* ============================
   RATE RULES
============================ */
Table rate_rules {
  id bigint [pk, increment]
  api_id bigint [not null]
  scope enum('api', 'api_key', 'user', 'ip') [not null]
  limit_value int [not null]
  interval_seconds int [not null]
  burst_limit int
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (api_id)
  }

  Note: "Rate limiting rules; enforcement happens in Redis"
}

/* ============================
   REQUEST LOGS
============================ */
Table requests_log {
  id bigint [pk, increment]
  tenant_id bigint [not null]
  api_id bigint [not null]
  api_key_id bigint
  user_id bigint
  ip_address varchar(45)
  method varchar(10)
  path varchar(512)
  status_code int
  decision enum('allowed', 'throttled', 'blocked')
  latency_ms int
  snapshot_s3_url varchar(512)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (tenant_id, created_at)
    (api_id)
    (decision)
  }

  Note: "Immutable audit log for every evaluated request"
}

/* ============================
   BLOCKED EVENTS
============================ */
Table blocked_events {
  id bigint [pk, increment]
  tenant_id bigint [not null]
  api_id bigint
  block_type enum('ip', 'api_key', 'user', 'global')
  identifier varchar(255)
  reason varchar(512)
  expires_at timestamp
  unblocked_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (tenant_id)
    (identifier)
  }

  Note: "Security blocks with full lifecycle tracking (active, expired, manually unblocked)"
}

/* ============================
   ALERTS
============================ */
Table alerts {
  id bigint [pk, increment]
  tenant_id bigint [not null]
  type enum('spike', 'error_rate', 'abuse', 'system')
  severity enum('low', 'medium', 'high', 'critical')
  message varchar(1024)
  metadata json
  is_acknowledged boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (tenant_id)
    (severity)
  }

  Note: "Alerts generated by background abuse detection workers"
}

/* ============================
   RELATIONSHIPS
============================ */
Ref: users.tenant_id > tenants.id
Ref: apis.tenant_id > tenants.id
Ref: api_keys.api_id > apis.id
Ref: rate_rules.api_id > apis.id
Ref: requests_log.tenant_id > tenants.id
Ref: requests_log.api_id > apis.id
Ref: requests_log.api_key_id > api_keys.id
Ref: blocked_events.tenant_id > tenants.id
Ref: blocked_events.api_id > apis.id
Ref: alerts.tenant_id > tenants.id